--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
               <td class="col-head">CODE</td>
               <td class="col-head">TITLE</td>
               <td class="col-head">ARTIST</td>
+              <td class="col-head"></td>
             </tr>
           </thead>
           <tbody>
@@ -16,6 +17,7 @@
                 <td>{{ song.code }}</td>
                 <td>{{ song.title }}</td>
                 <td>{% for artist in song.artists %} {{ artist }}{% if not loop.last %}, {% endif %}{% endfor %}</td>
+                <td><button id="{{ song.code }}-sign-up" class="sign-up-btn">Sign up</button></td>
               </tr>
             {% endfor %}
           </tbody>
@@ -23,4 +25,31 @@
         {% else %}
            No songs!
         {% endif %}
+        <div id="sign-up-modal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>INFO</p>
+          </div>
+        </div>
+        <script>
+        var modal = document.getElementById("sign-up-modal");
+        var span = document.getElementsByClassName("close")[0];
+        
+        document.addEventListener('click', function (event) {
+          if (!event.target.matches('.sign-up-btn')) return;
+          event.preventDefault();
+          modal.style.display = "block";
+        }, false);
+        
+        span.onclick = function() {
+          modal.style.display = "none";
+        }
+        
+        window.onclick = function(event) {
+          if (event.target == modal) {
+            modal.style.display = "none";
+          }
+        }
+        
+        </script>
 {% endblock %}
