--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
                 <td>{{ song.code }}</td>
                 <td>{{ song.title }}</td>
                 <td>{% for artist in song.artists %} {{ artist }}{% if not loop.last %}, {% endif %}{% endfor %}</td>
-                <td><button id="{{ song.code }}-sign-up" class="sign-up-btn">Sign up</button></td>
+                <td><button data-code="{{ song.code }}" id="{{ song.code }}-sign-up" class="sign-up-btn">Sign up</button></td>
               </tr>
             {% endfor %}
           </tbody>
@@ -28,17 +28,34 @@
         <div id="sign-up-modal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
-            <p>INFO</p>
+              <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+                <p>
+                  {{ form.code(size=50) }} <br/>
+                </p>
+                <p>
+                  {{ form.name.label }}: 
+                  {{ form.name(size=50) }} <br/>
+                  {% for error in form.name.errors %}
+                  <span style="color: red;">{{ error }}</span>
+                  {% endfor %}
+                </p>
+                <p>
+                  {{ form.submit() }}
+                </p>
+              </form>
           </div>
         </div>
         <script>
         var modal = document.getElementById("sign-up-modal");
         var span = document.getElementsByClassName("close")[0];
+        var codeField = document.getElementById("code");
         
         document.addEventListener('click', function (event) {
           if (!event.target.matches('.sign-up-btn')) return;
           event.preventDefault();
           modal.style.display = "block";
+          codeField.value = event.target.getAttribute('data-code');
         }, false);
         
         span.onclick = function() {
