Add basic performance queue

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
         <ul class="nav">
           <li><a href="{{ url_for('add_song') }}">Add Song</a></li>
           <li><a href="{{ url_for('index') }}">Song List</a></li>
-          <li><a href="#">Queue</a></li>
+          <li><a href="{{ url_for('view_performances') }}">Queue</a></li>
         </ul>
       </nav>
     </header>
