--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -91,3 +91,40 @@ table.center {
 .error {
   color: red;
 }
+
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  border-radius: 2px;
+  border: #d4b2bd 1px solid;
+  background-color: #c292a2;
+  color: #fff;
+  padding: 16px;
+  position: fixed;
+  left: 50%;
+  top: 5px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@keyframes fadein {
+  from {top: 0; opacity: 0;}
+  to {top: 5px; opacity: 1;}
+}
+
+@keyframes fadeout {
+  from {top: 5px; opacity: 1;}
+  to {top: 0; opacity: 0;}
+}
+
+.snackbar-btn {
+
+}
+
+#undo {
+  color: red;
+}
