Add delete song functionality

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,8 @@
                 <td>{% for artist in song.artists %} {{ artist }}{% if not loop.last %}, {% endif %}{% endfor %}</td>
                 {% if current_user.is_authenticated %}
                 <td>
-                  <a href="{{ url_for('edit_song', id=song.id) }}">Edit</a>
+                  <a href="{{ url_for('edit_song', id=song.id) }}">Edit</a> | 
+                  <a href="{{ url_for('delete_song', id=song.id) }}">Delete</a>
                 </td>
                 {% else %}
                 <td><button data-code="{{ song.code }}" id="{{ song.code }}-sign-up" class="sign-up-btn">Sign up</button></td>
