--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,30 +18,30 @@
       <nav>
         <ul class="nav">
           {% if current_user.is_authenticated %}
-          <p>{{ current_user.username }}</p>
-          {% endif %}
-          {% if current_user.is_authenticated %}
-          <li><a href="{{ url_for('logout') }}">Logout</a></li>
-          <li><a href="{{ url_for('add_song') }}">Add Song</a></li>
-          {% else %}
-          <li><a href="{{ url_for('login') }}">Log in</a></li>
+          <span class="highlight">{{ current_user.username }}</span><br/>
           {% endif %}
           <li><a href="{{ url_for('index') }}">Song List</a></li>
           <li><a href="{{ url_for('view_performances') }}">Queue</a></li>
+          {% if current_user.is_authenticated %}
+          <li><a href="{{ url_for('add_song') }}">Add Song</a></li>
+          <li><a class="logout" href="{{ url_for('logout') }}">Logout</a></li>
+          {% else %}
+          <li><a class="login" href="{{ url_for('login') }}">Log in</a></li>
+          {% endif %}
         </ul>
       </nav>
     </header>
     <div>
-      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-      <ul class="message">
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
-      {% endwith %}
       <main>
+      {% with messages = get_flashed_messages() %}
+      <div class="error">
+      {% if messages %}
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
+      {% endif %}
+      </div>
+      {% endwith %}
       {% block content %}
       {% endblock %}
       </main>
