--- a/app/templates/confirm_delete.html
+++ b/app/templates/confirm_delete.html
@@ -8,7 +8,7 @@
   <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     <p>
-    <a href="{{ url_for('index') }}">Cancel</a> {{ form.submit() }}
+    <a href="{{ url_for('index') }}">Cancel</a> <input class="btn-red" id="submit" name="submit" type="submit" value="Delete">
     </p>
   </form>
 {% endblock %}
