--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,18 +6,18 @@
     {{ form.hidden_tag() }}
     <p>
       {{ form.username.label }}: 
-      {{ form.username(size=50) }}<br/>
+      {{ form.username(size=30) }}<br/>
       {% for error in form.username.errors %}
       <span id="err-msg" class="error">{{ error }}</span>
       {% endfor %}
     </p>
     <p>
       {{ form.password.label }}: 
-      {{ form.password(size=50) }}<br/>
+      {{ form.password(size=30) }}<br/>
       {% for error in form.password.errors %}
       <span id="err-msg" class="error">{{ error }}</span>
       {% endfor %}
     </p>
-    <p>{{ form.submit() }}</p>
+    <p><input class="btn-blue" id="submit" name="submit" type="submit" value="Sign In"></p>
   </form>
 {% endblock %}
