--- a/app/templates/performance_table.html
+++ b/app/templates/performance_table.html
@@ -1,34 +1,30 @@
-        {% if performances %}
-        <table class="table center">
-          <thead>
-            <tr>
-              <td class="col-head">CODE</td>
-              <td class="col-head">TITLE</td>
-              <td class="col-head">ARTIST</td>
-              <td class="col-head">PERFORMER</td>
-              {% if current_user.is_authenticated %}
-              <td class="col-head"></td>
-              {% endif %}
-            </tr>
-          </thead>
-          <tbody>
-            {% for performance in performances %}
-              <tr>
-                <td>{{ performance.song.code }}</td>
-                <td>{{ performance.song.title }}</td>
-                <td>{% for artist in performance.song.artists %} {{ artist }}{% if not loop.last %}, {% endif %}{% endfor %}</td>
-                <td>{{ performance.name }}</td>
-                {% if current_user.is_authenticated %}
-                <td>
-                <form method="post">
-                <button data-id="{{ performance.id }}" class="snackbar-btn">Delete</button>
+       {% if performances %}
+        <div>
+          <h2>Queue</h2>
+          <div class="performance-grid grid-header">
+            <label>CODE</label>
+            <label>TITLE</label>
+            <label>ARTIST</label>
+            <label>PERFORMER</label>
+            {% if current_user.is_authenticated %}<label></label>{% endif %}
+          </div>
+          {% for performance in performances %}
+          <div class="performance-grid performance-item">
+            <div class="code">{{ performance.song.code }}</div>
+            <div class="title">{{ performance.song.title }}</div>
+            <div class="artist">{% for artist in performance.song.artists %} {{ artist }}{% if not loop.last %}, {% endif %}{% endfor %}</div>
+            <div class="performer">{{ performance.name }}</div>
+            {% if not current_user.is_authenticated %}{% if loop.first %}<div class="highlight">up next!</div>{% endif %}{% endif %}
+            {% if current_user.is_authenticated %}
+            <div class="delete">
+            <form method="post">
+                <button data-id="{{ performance.id }}" class="snackbar-btn btn-red">Delete</button>
                 </form>
-                </td>
-                {% endif %}
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+            </div>
+            {% endif %}
+          </div>
+          {% endfor %}
+        </div>
         {% else %}
            No performances!
         {% endif %}
