--- a/app/templates/song_form.html
+++ b/app/templates/song_form.html
@@ -2,38 +2,41 @@
 
 {% block content %}
   <h1>{{ title }}</h1>
-  <form action="" method="post" novalidate>
+  <form class="song-form" action="" method="post" novalidate>
     {{ form.hidden_tag() }}
-    <p>
+    <p class="form-group">
       {{ form.code.label }}: 
-      {{ form.code(size=50) }} <br/>
+      {{ form.code(size=26) }}
+    </p>
       {% for error in form.code.errors %}
-      <span style="color: red;">{{ error }}</span>
+      <span class="error">{{ error }}</span>
       {% endfor %}
-    </p>
-    <p>
+    <p class="form-group">
       {{ form.title.label }}:
-      {{ form.title(size=50) }} <br/>
-      {% for error in form.title.errors %}
-      <span style="color: red;">{{ error }}</span>
-      {% endfor %}
+      {{ form.title(size=26) }}
     </p>
+      {% for error in form.title.errors %}
+      <span class="error">{{ error }}</span>
+      <br/>
+      {% endfor %}
+    <br/>
     {{ form.artists.label }}: <br/>
     {% for subform in form.artists %}
     <div id="artist-{{ loop.index0 }}-form" class="subform" data-index="{{ loop.index0 }}">
-      {{ subform.form.name.label }}
-      {{ subform.form.name(size=50) }}
-      <button id="delete-button-{{ loop.index0 }}" type="button" class="remove-btn">Remove</button>
-      <br/>
+      <p class="form-group">
+      {{ subform.form.name.label }}: 
+      {{ subform.form.name(size=15) }}
+      <button id="delete-button-{{ loop.index0 }}" type="button" class="remove-btn btn-red">Remove</button>
+      </p>
       {% for error in subform.form.name.errors %}
-      <span style="color: red;">{{ error }}</span>
-      {% endfor %}
+      <span class="error">{{ error }}</span>
       <br/>
+      {% endfor %}
     </div>
     {% endfor %}
-    <button id="add-button" type="button">Add</button>
+    <button class="btn-purple" id="add-button" type="button">Add</button>
     <p>
-      {{ form.submit() }}
+      <input class="btn-blue" id="submit" name="submit" type="submit" value="Submit">
     </p>
   </form>
   <script>
