--- a/app/templates/song_table.html
+++ b/app/templates/song_table.html
@@ -20,7 +20,7 @@
                   <a href="{{ url_for('delete_song', id=song.id) }}">Delete</a>
                 </td>
                 {% else %}
-                <td><button data-code="{{ song.code }}" id="{{ song.code }}-sign-up" class="sign-up-btn">Sign up</button></td>
+                <td><button data-code="{{ song.code }}" id="{{ song.code }}-sign-up" class="sign-up-btn btn-purple">Sign up</button></td>
                 {% endif %}
               </tr>
             {% endfor %}
